@@ -77,7 +77,7 @@ void compare_equal(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, v
 
         if (r != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
-//??            compare_equal_compound(p0, p1);
+            compare_container(p0, p1, p2, p3, p4, (void*) PART_PRIMITIVE_MEMORY_ABSTRACTION, (void*) EQUAL_PRIMITIVE_OPERATION_ABSTRACTION);
         }
     }
 
